fixed content width on mobile

--- a/src/.vuepress/theme/styles/partials/_content.scss
+++ b/src/.vuepress/theme/styles/partials/_content.scss
@@ -1,4 +1,11 @@
 .content-container {
   flex-grow: 1;
   margin-top: 1.5rem;
+  padding: 0 1.5em;
+}
+
+@media (min-width: 719px) {
+  .content-container {
+    padding: 0;
+  }
 }
